# metamer-sounds

./: CLAUDE.md  README.md  metamer_sounds.ipynb  metamer_sounds_scientific_scaling.ipynb  metamer_sounds_simple_scaling.ipynb  postBuild  pyproject.toml  requirements.txt  tricolor_venn_colormath.ipynb  tricolor_venn_metamers.ipynb
.ipynb_checkpoints/: metamer_sounds-checkpoint.ipynb
deprecated/: colour_system.py  requirements_original.txt  requirements_synesthesia.txt  synesthesia_widget.ipynb
metamer_sounds/: __init__.py  core.py
